src/css.css
/* ... */
@keyframes hourhand-load {
	from {
		transform: rotateZ(0deg);
	}

	to {
		transform: rotateZ(360deg);
	}
}

@keyframes minhand-load {
	from {
		transform: rotateZ(135deg);
	}

	to {
		transform: rotateZ(495deg);
	}
}

#hourhand,
#minhand,
#sechand {
	position: absolute;
	transition: transform .75s ease;
}

.infolabel {
	position: fixed;
	bottom: 5px;
	left: 50%;
	transform: translateX(-50%);
	color: #fff;
	font-weight: bold;
	font-family: monospace;
	font-size: .95em
}

.bubble-text {
	color: #fff;
	position: fixed;
	font-family: monospace;
	font-weight: bold;
	font-size: 16px;
	background-color: #000a;
	padding: 3px;
	border-radius: 15px;
	user-select: none;
	pointer-events: none;
}

#fps {
	color: #fff;
	position: fixed;
	left: 5px;
	top: 5px;
	font-size: 20px;
	background-color: #000a;
	transition: color 1s ease-out;
	padding: 5px;
	border-radius: 0px 15px 15px 15px;
	user-select: none;
	pointer-events: none;
}

#errors {
	color: #fff;
	position: fixed;
	right: 5px;
	top: 5px;
	font-family: monospace;
	font-weight: bold;
	font-size: 20px;
	background-color: #000a;
	padding: 5px;
	border-radius: 15px 0px 15px 15px;
	user-select: none;
	pointer-events: none;
}

#battery-div {
	position: fixed;
	bottom: 10px;
	left: 10px;
	display: flex;
	flex-direction: row;
	gap: 15px;
	align-items: center;
	overflow: visible;
}

.battery {
	min-width: 50px;
	min-height: 20px;
	max-width: 50px;
	max-height: 20px;
	overflow: visible;
	border-radius: 5px;
	position: relative;
	outline: solid 3px #fff;
}

#battery-bar {
	display: block;
	width: 100%;
	height: 20px;
	background-color: #fff0;
	position: absolute;
	transition:
		background-color 3s ease,
		width 1s ease;
	z-index: calc(-infinity);
}

/* --- notifications --- */
.notif-div {
	display: flex;
	flex-direction: column;
	gap: 5px;
	position: fixed;
	top: 10vh;
	right: 0;
	z-index: calc(infinity);
}
html:not([dir='rtl']) .notif-div {
	align-items: flex-end;
}
html[dir='rtl'] .notif-div {
	align-items: flex-start;
}

.notif {
	display: flex;
	flex-direction: row;
	height: calc-size(auto);
	opacity: 0;
	width: max-content;
	height: max-content;
	max-width: 75vw;
	transform: translateX(100%);
	border: solid 1px #fff;
	border-right: none;
	border-radius: 10px 0px 0px 10px;
	corner-shape: superellipse(0);
	background-color: #0008;
	backdrop-filter: saturate(500%) blur(5px) opacity(95%) brightness(50%);
	text-align: right;
	overflow-wrap: normal;
	white-space: pre-wrap;
	transition:
		height 1s ease,
		transform 1s ease,
		opacity .25s ease-out;
}

.notif-title {
	color: #fff;
	font-size: 1.5em;
	font-weight: bolder;
	font-family: 'Manrope', monospace;
}

.notif-text {
	color: #fff;
	font-family: 'Manrope', monospace;
}

.notif-icon {
	float: left;
	padding: 5px;
	height: 32px;
}


/* --- main ui --- */
.ui {
	position: fixed;
	display: block;
	top: -50%;
	left: 50%;
	width: 80vw;
	height: 70vh;
	transform: translate(-50%, -50%) scale(95%);
	background-color: #0005;
	outline: 3px solid #fff8;
	padding: 5vh 5vw;
	border-radius: 50px;
	overflow: hidden;
	overscroll-behavior: none;
	text-wrap: nowrap;
	transition:
		top 1s ease,
		background-color 1s ease-out,
		outline 1.25s ease,
		border-radius 1s ease,
		width 1.25s ease,
		height 1.25s ease-out,
		transform 1.25s ease,
		backdrop-filter 1.25s ease;
	padding-top: 40px;
	backdrop-filter: blur(12px) opacity(85%);
	overscroll-behavior: contain;
	z-index: 100;
	user-select: none;
	pointer-events: none;
	cursor: none;
}

.ui.open {
	background-color: #0000;
	outline: 0px solid #fff0;
	width: 90vw;
	height: 75vh;
	top: 55vh;
	border-radius: 1px;
	backdrop-filter: none;
	transform: translate(-50%, -50%);
}

.ui.inactive {
	transition:
		top 1s ease,
		background-color 1s ease-out,
		opacity 2.5s ease,
		width 1.25s ease,
		height 1.25s ease;
	opacity: 15%;
}

#icon {
	position: fixed;
	bottom: 0px;
	left: 0px;
	background-color: #0004;
	width: 50px;
	border-radius: 25px;
	padding: 5px;
}

.ui-options {
	height: max-content;
	position: fixed;
	margin-bottom: -20px;
	padding-bottom: 20px;
	padding-top: 20px;
	margin-top: -20px;
	overflow: visible;
	transition: left .2s linear;
	z-index: 110;
	direction: ltr;
	unicode-bidi: bidi-override;
}

.ui-option {
	font-family: 'Manrope', monospace;
	background-color: #0000;
	color: #fff;
	font-size: 30px;
	text-decoration-color: transparent;
	text-decoration-line: underline;
	text-underline-offset: 10px;
	font-weight: lighter;
	width: fit-content;
	transition:
		font-weight .5s ease,
		text-decoration-color 250ms ease-out;
	white-space: nowrap;
	border-radius: 50px;
	padding: 10px 15px 15px 15px;
	margin: 0px 20px;
	user-select: none;
}

@keyframes highlight-option {
	from {
		box-shadow: 0px 0px 5px #0004;
	}

	to {
		box-shadow: 0px 0px 10px 5px #0004;
	}
}

.ui-option.selected {
	font-weight: bolder;
	text-decoration-color: #fff;
	background-color: #0004;
	box-shadow: 0px 0px 10px 5px #0004;
	animation: highlight-option linear 1s infinite alternate;
}

.ui-content {
	position: absolute;
	overflow: visible;
	opacity: 0%;
	height: 90%;
	top: 80px;
	margin-top: -40px;
	opacity: 0%;
	mask-image: linear-gradient(to bottom,
			#0000 0%,
			#000 20%,
			#000 90%,
			#0000 100%);
	display: none;
	z-index: -50;
}

html:not([dir='rtl']) .ui-content {
	left: 50%;
	margin-left: -40px;
	padding-left: 40px;
	transition:
		left .5s ease,
		top 1.5s ease,
		opacity .15s ease-in,
		display 1s allow-discrete;
}
html[dir='rtl'] .ui-content {
	right: 50%;
	margin-right: -40px;
	padding-right: 40px;
	transition:
		right .5s ease,
		top 1.5s ease,
		opacity .15s ease-in,
		display 1s allow-discrete;
}

html:not([dir='rtl']) .ui-content.selected {
	left: 25vw;
	opacity: 100%;
	z-index: 105;
}
html[dir='rtl'] .ui-content.selected {
	right: 25vw;
	opacity: 100%;
	z-index: 105;
}

.ui-suboption {
	position: relative;
	padding: 2px 10px;
	border-radius: 10px;
	width: min-content;
	white-space: pre;
	opacity: 100%;
}
/* ... */

